[build-system]
requires = [
  #"setuptools>=61.0",
  "setuptools==76.1.0",
  "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "wavely"
dynamic = ["version"]
dependencies = []
authors = [
  { name="jhunt" },
]
description = "A small library for building curve coordinates from simple components"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Documentation = "https://github.com/jhunt/wavely/blob/main/README.md"
Issues = "https://github.com/jhunt/wavely/issues"
Source = "https://github.com/jhunt/wavely"

[tool.setuptools_scm]
